--- a/cortex.yaml
+++ b/cortex.yaml
@@ -14,3 +14,7 @@ info:
     github:
       alias: cortex
       repository: cortex-workshops/billing-service
+  x-cortex-issues:
+    jira:
+      labels:
+        - name: payments
