--- a/cortex.yaml
+++ b/cortex.yaml
@@ -20,6 +20,8 @@ info:
         - name: payments
   x-cortex-link:
   - name: Logs
+  x-cortex-dependency:
+  - tag: test-database
     type: logs
     url: https://datadog.com
   - name: Billing API Spec
